# wenko

./: .gitignore  .gitmodules  LICENSE  README.md  README_CN.md  chat.go  embedding.go  export.go  export_20250621.md  go.mod  go.sum  main.go  main.py  pyproject.toml  requirements.txt  start.bat  start.sh  work_state_summary.md
app/: chromadb.py  config.py  helper.py  logger.py  nodes.py  prompts.py  quickstart_falkordb.py  server.py  session.py  states.py  stream.py  types.py  workflow.py
docs/: ollama_init.md
workflow/: .env  README.md  __init__.py  app.py  chat_config.example.json  chat_db.py  chat_processor.py  cognitive_object.py  control_steps.py  ecs_handler.py  ecs_schema.py  emotion_detector.py  example.py  executor.py  graph.py  graph_runner.py  hitl_handler.py  hitl_schema.py  image_analyzer.py  intent_recognizer.py  intent_rules.py  intent_types.py  langgraph.json  logger.py  main.py  mcp_manager.py  mcp_tool_executor.py  memory_extractor.py  memory_manager.py  observation.py  pyproject.toml  response_strategy.py  start.sh  steps.py  templates_api_examples.md  test_workflow.py  ui_translation.py
workflow/core/: graph.py  input_normalization.py  prompts.py  state.py
workflow/core/nodes/: ecs.py  emotion.py  hitl.py  image.py  intent.py  memory.py  reasoning.py  tool_node.py
workflow/data/: chat_history.db
workflow/tests/: test_co_registry.py  test_cognitive_object.py  test_execution_contract.py  test_execution_observation.py  test_intent_node.py  test_intent_recognition.py  test_mcp_integration.py  test_ui_translation.py  verify_graph.py
(+353 files in other folders)
